# team-audio-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
src/icpc_audio/: __init__.py  __main__.py  cli.py  config.py  configure.py  generator.py  models.py  tts.py
